@@ -1,3 +1,10 @@
+Update for version 10.3.4 - 11-Jan-2022 (MDD)
+	pkg/acs/calacs/Dates
+	pkg/acs/calacs/History
+	pkg/acs/calacs/Updates
+	pkg/acs/calacs/acsccd/doccd.c
+	pkg/acs/calacs/include/acsversion.h
+
 Update for version 10.3.3 - 24-May-2021 (MDD)
 	pkg/acs/calacs/Dates
 	pkg/acs/calacs/History
